--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Beranda - Website Mawan</title>
+  <title>Beranda - Website Azzam</title>
   <style>
     body {
       margin: 0;
@@ -243,3 +243,4 @@
   </footer>
 </body>
 </html>
+
