--- a/About Me2.html
+++ b/About Me2.html
@@ -390,7 +390,7 @@ Selain itu, saya menyukai tantangan dalam menggabungkan ide-ide kreatif ke dalam
       </div>
       <div>
         <div class="dot-container">
-    <img src="https://instagram.fcgk9-1.fna.fbcdn.net/v/t51.29350-15/359808654_805442401244057_5280115813177132628_n.webp?stp=dst-jpg_e35_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6IkZFRUQuaW1hZ2VfdXJsZ2VuLjc1NXg3NTUuc2RyLmYyOTM1MC5kZWZhdWx0X2ltYWdlLmMyIn0&_nc_ht=instagram.fcgk9-1.fna.fbcdn.net&_nc_cat=105&_nc_oc=Q6cZ2QFYwPbdDgdZX1TFmZT26D3cU5kjrlMOi_N9PncOGsg-W9D91Hj9NcQlM0hjFNFJl1w&_nc_ohc=f7ROx823UosQ7kNvwHUNIYs&_nc_gid=v58o0IbKSGUGQt93z1DJfQ&edm=AP4sbd4BAAAA&ccb=7-5&ig_cache_key=MzE0NzI4OTU3NDczOTY4MzUxNQ%3D%3D.3-ccb7-5&oh=00_AffzwRQ8g5Z6tsKmV1aFVWFWrilpCzv7F9-Zy-p8saRJgg&oe=68EA9B08&_nc_sid=7a9f4b" alt="Titik 1" />
+    <img src="Frame 1.jpg" alt="Titik 1" />
 </div>
   </div>
     </section>
@@ -483,17 +483,17 @@ Selain itu, saya menyukai tantangan dalam menggabungkan ide-ide kreatif ke dalam
       
 <div class="cards-container">
 <div class="cards">
-      <div class="icons"><img src="C:\Users\AHA2\OneDrive\Pictures\TUGAS\Yang Sudah Selesai\A4 - 1.jpg" alt="Ikon Kreatif" width="150" height="200"></div>
+      <div class="icons"><img src="A4 - 1.jpg" alt="Ikon Kreatif" width="150" height="200"></div>
       <h3><strong>Kolase
 </strong><br></h3>
 </div>
 <div class="cards">
-      <div class="icons"><img src="C:\Users\AHA2\Downloads\Tugas Kelas 12\Mawan\photo_2025-07-22_02-18-24.jpg" alt="Ikon Kreatif" width="150" height="200"></div>
+      <div class="icons"><img src="photo_2025-07-22_02-18-24.jpg" alt="Ikon Kreatif" width="150" height="200"></div>
       <h3><strong>Brosur Tentang Sekolah
 </strong><br></h3>
 </div>
 <div class="cards">
-      <div class="icons"><img src="C:\Users\AHA2\OneDrive\Pictures\TUGAS\Yang Sudah Selesai\semester 1\1733895990781.jpg" alt="Ikon Kreatif" width="150" height="200"></div>
+      <div class="icons"><img src="1733895990781.jpg" alt="Ikon Kreatif" width="150" height="200"></div>
       <h3><strong>Fotografi
 </strong><br></h3>
 
@@ -528,3 +528,4 @@ Selain itu, saya menyukai tantangan dalam menggabungkan ide-ide kreatif ke dalam
 </body>
 
 </html>
+
