--- a/About Me2.html
+++ b/About Me2.html
@@ -390,7 +390,7 @@ Selain itu, saya menyukai tantangan dalam menggabungkan ide-ide kreatif ke dalam
       </div>
       <div>
         <div class="dot-container">
-    <img src="Frame 1.jpg" alt="Titik 1" />
+    <img src="frame-1.jpg" alt="Titik 1" />
 </div>
   </div>
     </section>
@@ -528,4 +528,5 @@ Selain itu, saya menyukai tantangan dalam menggabungkan ide-ide kreatif ke dalam
 </body>
 
 </html>
+
 
