--- a/About Me2.html
+++ b/About Me2.html
@@ -334,4 +334,42 @@
 
             <div class="cards">
               <div class="icons">
-                <img src
+                <img src="photo_2025-07-22_02-18-24.jpg" alt="Brosur Sekolah" width="150" height="200" loading="lazy">
+              </div>
+              <h3><strong>Brosur Tentang Sekolah</strong></h3>
+            </div>
+
+            <div class="cards">
+              <div class="icons">
+                <img src="1733895990781.jpg" alt="Fotografi" width="150" height="200" loading="lazy">
+              </div>
+              <h3><strong>Fotografi</strong></h3>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <div class="card" style="margin-top:12px;">
+    <h3 style="margin:0 0 8px;">Kontak</h3>
+    <p style="margin:0 0 12px;">Silakan hubungi saya melalui email: <a href="mailto:Azzamakun4sl1@gmail.com">Azzamakun4sl1@gmail.com</a></p>
+  </div>
+
+  <footer class="container">
+    <div style="display:flex; flex-wrap:wrap; gap:12px; align-items:center; justify-content:space-between;">
+      <div><strong>Muhammad Azzam Irashi</strong> · © <span id="year"></span></div>
+      <div style="display:flex; gap:12px;">
+        <a href="#">Portofolio</a>
+        <a href="#">Blog</a>
+        <a href="#">Kebijakan</a>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
