--- a/About Me2.html
+++ b/About Me2.html
@@ -327,7 +327,7 @@
             <div class="cards">
               <div class="icons">
                 <!-- pakai exact filename dari repo (ada spasi dan tanda -) -->
-                <img src="A4%20-%201.jpg" alt="Kolase A4" width="150" height="200" loading="lazy">
+                <img src="a4-1.jpg" alt="Kolase A4" width="150" height="200" loading="lazy">
               </div>
               <h3><strong>Kolase</strong></h3>
             </div>
@@ -373,4 +373,5 @@
   </script>
 </body>
 </html>
+
 
