--- a/About Me2.html
+++ b/About Me2.html
@@ -216,7 +216,13 @@
           <h2><p>Perkenalkan, nama saya <strong>Muhammad Azzam Irashi</strong>.</p></h2>
 
           <p>Saya seorang siswa kelas <strong>XII DKV 1</strong> di <strong>SMKN 1 Kota Tangerang</strong>, Kota Tangerang.</p>
-          <p>Sejak awal masuk sekolah menengah kejuruan, saya memiliki ketertarikan yang cukup besar dalam bidang Desain Komunikasi Visual serta eksplorasi Proyek 3 Dimensi...</p>
+         Sejak awal masuk sekolah menengah kejuruan, saya memiliki ketertarikan yang cukup besar dalam bidang Desain Komunikasi Visual serta eksplorasi Proyek 3 Dimensi. Ketertarikan ini berawal dari hobi menggambar sederhana di waktu luang, kemudian berkembang menjadi minat mendalami dunia digital art, ilustrasi, hingga percobaan membuat model tiga dimensi dengan software yang tersedia.</p>
+<p>
+Bagi saya, desain bukan sekadar membuat tampilan yang indah, tetapi juga tentang bagaimana sebuah karya bisa menyampaikan pesan, emosi, dan identitas tertentu kepada orang yang melihatnya. Dalam proses belajar, saya berusaha melatih kepekaan terhadap warna, tipografi, komposisi, hingga perspektif ruang pada karya tiga dimensi.
+</p>
+<p>
+Selain itu, saya menyukai tantangan dalam menggabungkan ide-ide kreatif ke dalam proyek visual, baik berupa poster, ilustrasi digital, desain identitas visual, maupun karya eksperimen dalam bentuk 3D. Dengan kemampuan yang masih terus saya kembangkan, saya yakin bahwa setiap proses kecil akan menjadi bekal berharga untuk masa depan saya di bidang desain.</p>
+
 
           <p class="quote">“Kreativitas tanpa batas adalah kunci untuk terus berkembang.”</p>
           <div class="badges">
@@ -250,7 +256,7 @@
             <li><strong>Belajar Software — Adobe Photoshop, Illustrator, dan Figma:</strong></li>
           </ul>
 
-          <p>Beberapa karya saya unggah untuk latihan konsistensi dan menerima masukan...</p>
+<p>Beberapa karya saya unggah untuk latihan konsistensi dan menerima masukan. Saya menyiapkan caption yang menjelaskan proses singkat (sketsa–final), menambahkan hashtag relevan, dan memberi watermark ringan. Tujuannya bukan sekadar pamer, tetapi membangun kebiasaan shipping karya dan belajar dari umpan balik.</p>
         </div>
       </div>
     </section>
@@ -261,62 +267,64 @@
           <h2>Kelebihan</h2>
           <div class="containere">
             <div class="card">
-              <h3><strong><p style="color: #40A6E5;">Kreatif dalam membuat konsep desain</p></strong></h3>
-              <p>...</p>
-            </div>
-            <div class="card">
-              <h3><strong><p style="color: #40A6E5;">Terbiasa bekerja dengan deadline sekolah/proyek kecil</p></strong></h3>
-              <p>...</p>
-            </div>
-            <div class="card">
-              <h3><strong><p style="color: #40A6E5;">Suka belajar hal baru terkait visual</p></strong></h3>
-              <p>...</p>
-            </div>
-            <div class="card">
-              <h3><strong><p style="color: #40A6E5;">Mampu bekerja sendiri maupun dalam tim</p></strong></h3>
-              <p>...</p>
-            </div>
-          </div>
+             <h3><strong><p style="color: #40A6E5;">Kreatif dalam membuat konsep desain</p></strong></h3><ul> Saya memulai dari riset masalah/tujuan, membuat mind map untuk memetakan ide, lalu mengubahnya menjadi moodboard (referensi visual, warna, tipografi). Dengan metode ini, konsep yang saya tawarkan tidak hanya dekoratif, tetapi relevan dengan pesan. Saya juga terbiasa menyiapkan 2–3 opsi arah desain agar proses diskusi dan revisi lebih terarah.
+        </ul>
+   </div>
+    <div class="card">
+        <h3><strong><p style="color: #40A6E5;">Terbiasa bekerja dengan deadline sekolah/proyek kecil</p></strong></h3>Saya memecah tugas menjadi target harian (milestone), membuat to-do list prioritas, dan menutup hari dengan review singkat: apa yang selesai, apa yang tertunda, dan kenapa. Teknik sederhana seperti time blocking dan Pomodoro membantu saya tetap fokus tanpa kelelahan panjang.
+    </div>
+        <div class="card">
+        <h3><strong><p style="color: #40A6E5;">Suka belajar hal baru terkait visual</p></strong></h3> Saya aktif mencoba tutorial pendek (tipografi, color grading, layout) dan mempraktikkannya pada proyek mini. Saya juga melakukan reverse engineering desain yang saya suka: mengamati hierarki, ritme, dan kontras, lalu menirunya sebagai latihan (bukan untuk dipublikasi), supaya memahami “kenapa” sesuatu terlihat bekerja.
+           </div>
+        <div class="card">
+        <h3><strong><p style="color: #40A6E5;">Mampu bekerja sendiri maupun dalam tim</p></strong></h3>Saat mandiri, saya menjaga rapi file/layer agar mudah dilanjutkan besok. Dalam tim, saya terbuka pada feedback dan berusaha memberi saran yang spesifik dan sopan. Saya terbiasa membuat versioning (v1, v2, final, final-rev) dan catatan perubahan agar semua anggota paham perkembangan proyek.
+   </div>
+  </div>
+  </div>
+  </div>
+</section>
+
+
+<section id="kegiatan">
+        <div class="item">
+       <div class="box">
+              <h2>Kegiatan</h2>
+       <div class="prestasi-container">
+
+    <div class="cards">
+      <div class="icons">🌐</div>
+      <h3><strong>METIKASIS — Bidang Kreatif (2023–2024)
+</strong><br></h3>
+         Di METIKASIS, saya berkontribusi pada pembuatan materi visual: poster kegiatan, feed pengumuman, dan dokumentasi sederhana. 
+</div>
+    <div class="cards">
+      <div class="icons">🗾</div>
+        <h3><strong>NIHON Club — Bidang Wawasan (2023–2024)</strong><br></h3> 
+        Di NIHON Club, saya membantu merangkum materi pengenalan budaya Jepang (festival, etika dasar, pop culture) menjadi handout dan visual singkat yang mudah dipahami.
         </div>
-      </div>
+           <div class="cards">
+      <div class="icons">💻</div>
+        <h3><strong>Proyek 3D besar — Tim (Sedang Berjalan)</strong><br></h3>  Saat ini saya terlibat pada proyek 3D bersama tim. Peran saya berfokus pada environment props (objek pendukung suasana) dan penataan lighting dasar untuk still render. 
+</div>
+</div>
+</div>
+</div>
     </section>
 
-    <section id="kegiatan">
-      <div class="item">
-        <div class="box">
-          <h2>Kegiatan</h2>
-          <div class="prestasi-container">
-            <div class="cards">
-              <div class="icons">🌐</div>
-              <h3><strong>METIKASIS — Bidang Kreatif (2023–2024)</strong></h3>
-              <p>Di METIKASIS, saya berkontribusi pada pembuatan materi visual...</p>
-            </div>
-            <div class="cards">
-              <div class="icons">🗾</div>
-              <h3><strong>NIHON Club — Bidang Wawasan (2023–2024)</strong></h3>
-              <p>Di NIHON Club, saya membantu merangkum materi...</p>
-            </div>
-            <div class="cards">
-              <div class="icons">💻</div>
-              <h3><strong>Proyek 3D besar — Tim (Sedang Berjalan)</strong></h3>
-              <p>Saat ini saya terlibat pada proyek 3D bersama tim...</p>
-            </div>
-          </div>
-        </div>
-      </div>
+
+   <section id="pendidikan">
+            <div class="item">
+            <div class="box">
+      <h2>Pendidikan</h2>
+      <div class="job">
+    <div class="job-title"><strong>SMKN 1 Kota Tangerang — Jurusan DKV </strong>
+</div>
+  Di jenjang ini, minat saya terarah menjadi keterampilan. Saya mempelajari prinsip dasar desain (kontras, keseimbangan, ritme), tipografi, fotografi dasar, layouting, hingga pengenalan multimedia. Latihan berulang, critique session dari guru/teman, dan tugas proyek membuat saya memahami proses kreatif yang sistematis: riset → ide → sketsa → eksekusi → evaluasi.
+</div>
+</div>
+</div>
     </section>
 
-    <section id="pendidikan">
-      <div class="item">
-        <div class="box">
-          <h2>Pendidikan</h2>
-          <div class="job">
-            <div class="job-title"><strong>SMKN 1 Kota Tangerang — Jurusan DKV</strong></div>
-            <p>Di jenjang ini, minat saya terarah menjadi keterampilan...</p>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <section id="Hasil Karya">
       <div class="item">
@@ -373,5 +381,6 @@
   </script>
 </body>
 </html>
+
 
 
